--- a/src/shared/styles/typography.css
+++ b/src/shared/styles/typography.css
@@ -18,7 +18,7 @@ label {
     font-size: 14px;
     font-weight: 600;
     text-align: left;
-    color: var(--color-neutral-40);
+    color: var(--color-neutral-60);
     line-height: 14px;
 }
 
@@ -69,6 +69,14 @@ p {
     font-weight: 500;
     color: var(--color-neutral-90);
     line-height: 24px;
+
+    &.label {
+        font-size: 14px;
+        font-weight: 600;
+        text-align: left;
+        color: var(--color-neutral-60);
+        line-height: 14px;
+    }
 }
 
 a {
